@@ -17,7 +17,7 @@
 <body>
 
   <div id=iconContainer>
-    <a href="uitleg.html" target="_blank"><i class="far fa-question-circle fa-lg"></i></a>
+    <a id="icnUitleg" href="uitleg.html" target="_blank"><i class="far fa-question-circle fa-2x"></i></a>
     <i id="volumeMax" class="fas fa-volume-up fa-lg"></i>
     <i id="volumeMin" class="fas fa-volume-off fa-lg"></i>
     <i id= "refresh" class="fas fa-redo fa-lg"></i>
@@ -114,7 +114,7 @@
       </table>
     </div>
   </main>
-  <footer>© <a href="mailto:oegehidddema@gmail.com">Oege Hiddema</a> , versie: 16-3-2019 16:29</footer>
+  <footer>© <a href="mailto:oegehidddema@gmail.com">Oege Hiddema</a> , versie: 16-3-2019 18:14</footer>
 </body>
 
 </html>
